WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146085
Would like a way, in the API, to get notified about a web process crash
https://bugs.webkit.org/show_bug.cgi?id=146085
Summary
Would like a way, in the API, to get notified about a web process crash
Anders Carlsson
Reported
2015-06-17 16:10:56 PDT
Would like a way, in the API, to get notified about a web process crash
Attachments
Patch
(5.12 KB, patch)
2015-06-17 16:15 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-06-17 16:15:55 PDT
Created
attachment 255048
[details]
Patch
Anders Carlsson
Comment 2
2015-06-17 17:23:02 PDT
Committed
r185680
: <
http://trac.webkit.org/changeset/185680
>
Stuart Morgan
Comment 3
2015-06-22 06:52:00 PDT
***
Bug 140212
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug