Would like a way, in the API, to get notified about a web process crash https://bugs.webkit.org/show_bug.cgi?id=146085 rdar://problem/17358828

Reviewed by Darin Adler.

* UIProcess/API/Cocoa/WKNavigationDelegate.h:
* UIProcess/Cocoa/NavigationState.h:
* UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::setNavigationDelegate):
(WebKit::NavigationState::NavigationClient::processDidCrash):

Canonical link: https://commits.webkit.org/164133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185680 268f45cc-cd09-0410-ab3c-d52691b4dbfc